## ###########################################################################
## File:    Makefile.am
##
## Purpose: Automatically generate Makefile.in for autoconf using automake.
##
## Author:  Robert Konecny
## ###########################################################################

#ACLOCAL_AMFLAGS= -I m4

AUTOMAKE_OPTIONS = no-dependencies
SUFFIXES = .y .l .H .h .m .C .cc .c .f .java .o
always_built_SUBDIRS = src
SUBDIRS = $(always_built_SUBDIRS) .




